# ciel_referentiel

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
ciel_referentiel/: admin.py  apps.py  models.py  urls.py  views.py
ciel_referentiel/templates/ciel_referentiel/: detail_activite_professionnelle.html  detail_competence.html  detail_taxonomie.html  index.html
cielref/: asgi.py  settings.py  urls.py  wsgi.py
