[project]
name = "test-django"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rémi Ourgaud", email = "remi@lazar.us.com" }
]
dependencies = [
    "django>=5.1.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
